==> GolinskiyKonstantin/STM32_Lib_OLED_SSD1306_I2C_SPI/oled_ssd1306/ssd1306.c <==
#include "ssd1306.h"
#define ABS(x)   ((x) > 0 ? (x) : -(x))

uint8_t SSD1306_Init(void) {
	
	ssd1306_Reset();
	
	#if defined(SSD1306_USE_I2C)
	// Init I2C ------------------------------------------------------------------
	ssd1306_I2C_Init();
	
	/* Check if LCD connected to I2C */
	if (HAL_I2C_IsDeviceReady(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 1, 20000) != HAL_OK) {
		/* Return false */
		return 0;
	}
	//----------------------------------------------------------------------------
	
	#elif defined(SSD1306_USE_SPI)
	
	
	
	
	#else
	#error "You should define SSD1306_USE_SPI or SSD1306_USE_I2C macro"
	#endif
	
	
	/* A little delay */
	uint32_t p = 2500;
	while(p>0)
		p--;
	
	/* Init LCD */

#ifdef SSD1306_64x48
//== Init sequence for 64x48 Micro OLED module ============================
    ssd1306_WriteCommand( SSD1306_DISPLAYOFF );
    ssd1306_WriteCommand( SSD1306_SETDISPLAYCLOCKDIV );
	ssd1306_WriteCommand( 0x80 );  								// the suggested ratio 0x80
    ssd1306_WriteCommand( SSD1306_SETMULTIPLEX );
	ssd1306_WriteCommand( 0x2F );        
    ssd1306_WriteCommand( SSD1306_SETDISPLAYOFFSET );
	ssd1306_WriteCommand( 0x0 );     							// no offset
    ssd1306_WriteCommand( SSD1306_SETSTARTLINE | 0x0 );       	// line #0
    ssd1306_WriteCommand( SSD1306_CHARGEPUMP );
	ssd1306_WriteCommand( 0x14 );          						// internal vcc
    ssd1306_WriteCommand( SSD1306_NORMALDISPLAY );
    ssd1306_WriteCommand( SSD1306_DISPLAYALLON_RESUME );
    ssd1306_WriteCommand( SSD1306_SEGREMAP | 0x1 );            	// column 127 mapped to SEG0
    ssd1306_WriteCommand( SSD1306_COMSCANDEC );                	// column scan direction reversed
    ssd1306_WriteCommand( SSD1306_SETCOMPINS );
	ssd1306_WriteCommand( 0x12 );          						// 0x12 if height > 32 else 0x02
    ssd1306_WriteCommand( SSD1306_SETCONTRAST );
	ssd1306_WriteCommand( 0x7F );         						// contrast level 127
    ssd1306_WriteCommand( SSD1306_SETPRECHARGE );
	ssd1306_WriteCommand( 0xF1 );        						// pre-charge period (1, 15)
    ssd1306_WriteCommand( SSD1306_SETVCOMDETECT );
	ssd1306_WriteCommand( 0x40 );       						// vcomh regulator level
    ssd1306_WriteCommand( SSD1306_DISPLAYON );
//=======================================================================

#elif defined SSD1306_96x16	
//== Init sequence for SSD1306 96x16 OLED module ========================
    ssd1306_WriteCommand( SSD1306_DISPLAYOFF );
    ssd1306_WriteCommand( SSD1306_SETDISPLAYCLOCKDIV );
	ssd1306_WriteCommand( 0x80 );  								// clock divide ratio and osc frequency
    ssd1306_WriteCommand( SSD1306_SETMULTIPLEX );
	ssd1306_WriteCommand( 0x0F );        						// multiplex ratio
    ssd1306_WriteCommand( SSD1306_SETDISPLAYOFFSET );
	ssd1306_WriteCommand( 0x0 );     							// display offset zero
    ssd1306_WriteCommand( SSD1306_SETSTARTLINE | 0x0 );        	// set display start line to 0
    ssd1306_WriteCommand( SSD1306_CHARGEPUMP );
	ssd1306_WriteCommand( 0x14 );          						// charge pump setting enable
    ssd1306_WriteCommand( SSD1306_MEMORYMODE );
	ssd1306_WriteCommand( 0x00 );          						// page addressing mode
    ssd1306_WriteCommand( SSD1306_SEGREMAP | 0xA1 );           	// segment remap
    ssd1306_WriteCommand( SSD1306_COMSCANDEC );                	// scan dir reverse
    ssd1306_WriteCommand( SSD1306_SETCOMPINS );
	ssd1306_WriteCommand( 0x02 );          						// com pin HW config
    ssd1306_WriteCommand( SSD1306_SETCONTRAST );
	ssd1306_WriteCommand( 0xAF );         						// set contrast level 0xaf
    ssd1306_WriteCommand( SSD1306_SETPRECHARGE );
	ssd1306_WriteCommand( 0xF1 );        						// pre-charge period 0x0f1
    ssd1306_WriteCommand( SSD1306_SETVCOMDETECT );
	ssd1306_WriteCommand( 0x20 );       						// vcomh deselect level
    ssd1306_WriteCommand( SSD1306_DEACTIVATE_SCROLL );         	//  Deactivate scroll
    ssd1306_WriteCommand( SSD1306_DISPLAYALLON_RESUME );
    ssd1306_WriteCommand( SSD1306_NORMALDISPLAY );
    ssd1306_WriteCommand( SSD1306_DISPLAYON );
//=======================================================================	

#elif defined SSD1306_128x32
//== Init sequence for SSD1306 128x32 OLED module ======================
    ssd1306_WriteCommand( SSD1306_DISPLAYOFF );
    ssd1306_WriteCommand( SSD1306_SETDISPLAYCLOCKDIV );
	ssd1306_WriteCommand( 0x80 );  								// the suggested ratio 0x80
    ssd1306_WriteCommand( SSD1306_SETMULTIPLEX );
	ssd1306_WriteCommand( 0x1F );        						// ratio 32
    ssd1306_WriteCommand( SSD1306_SETDISPLAYOFFSET );
	ssd1306_WriteCommand( 0x0 );     							// no offset
    ssd1306_WriteCommand( SSD1306_SETSTARTLINE | 0x0 );        	// line #0
    ssd1306_WriteCommand( SSD1306_CHARGEPUMP );
	ssd1306_WriteCommand( 0x14 );          						// internal vcc
    ssd1306_WriteCommand( SSD1306_MEMORYMODE );
	ssd1306_WriteCommand( 0x02 );          						// page mode
    ssd1306_WriteCommand( SSD1306_SEGREMAP | 0x1 );            	// column 127 mapped to SEG0
    ssd1306_WriteCommand( SSD1306_COMSCANDEC );                	// column scan direction reversed
    ssd1306_WriteCommand( SSD1306_SETCOMPINS );
	ssd1306_WriteCommand( 0x02 );          						// sequential COM pins, disable remap
    ssd1306_WriteCommand( SSD1306_SETCONTRAST );
	ssd1306_WriteCommand( 0x7F );         						// contrast level 127
    ssd1306_WriteCommand( SSD1306_SETPRECHARGE );
	ssd1306_WriteCommand( 0xF1 );        						// pre-charge period (1, 15)
    ssd1306_WriteCommand( SSD1306_SETVCOMDETECT );
	ssd1306_WriteCommand( 0x40 );       						// vcomh regulator level
    ssd1306_WriteCommand( SSD1306_DISPLAYALLON_RESUME );
    ssd1306_WriteCommand( SSD1306_NORMALDISPLAY );
    ssd1306_WriteCommand( SSD1306_DISPLAYON );
//=======================================================================	

#elif defined SSD1306_128x64
//== Init sequence for SSD1306 128x64 OLED module ======================
    ssd1306_WriteCommand( SSD1306_DISPLAYOFF );
    ssd1306_WriteCommand( SSD1306_SETDISPLAYCLOCKDIV );
	ssd1306_WriteCommand( 0x80 );  								// the suggested ratio 0x80 
    ssd1306_WriteCommand( SSD1306_SETMULTIPLEX );
	ssd1306_WriteCommand( 0x3F );        						// ratio 64
    ssd1306_WriteCommand( SSD1306_SETDISPLAYOFFSET );
	ssd1306_WriteCommand( 0x0 );     							// no offset
    ssd1306_WriteCommand( SSD1306_SETSTARTLINE | 0x0 );        	// line #0	// подымаем картинку вверх
    ssd1306_WriteCommand( SSD1306_CHARGEPUMP );
	ssd1306_WriteCommand( 0x14 );          						// internal vcc
    ssd1306_WriteCommand( SSD1306_MEMORYMODE );
	ssd1306_WriteCommand( 0x02 );          						// page mode
    ssd1306_WriteCommand( SSD1306_SEGREMAP | 0x1 );            	// column 127 mapped to SEG0	// двигаем картинку вправо
    ssd1306_WriteCommand( SSD1306_COMSCANDEC );                	// column scan direction reversed
    ssd1306_WriteCommand( SSD1306_SETCOMPINS );
	ssd1306_WriteCommand( 0x12 );          						// alt COM pins, disable remap
    ssd1306_WriteCommand( SSD1306_SETCONTRAST );
	ssd1306_WriteCommand( 0x7F );         						// contrast level 127
    ssd1306_WriteCommand( SSD1306_SETPRECHARGE );
	ssd1306_WriteCommand( 0xF1 );        						// pre-charge period (1, 15)
    ssd1306_WriteCommand( SSD1306_SETVCOMDETECT );
	ssd1306_WriteCommand( 0x40 );       						// vcomh regulator level
    ssd1306_WriteCommand( SSD1306_DISPLAYALLON_RESUME );
    ssd1306_WriteCommand( SSD1306_NORMALDISPLAY );
    ssd1306_WriteCommand( SSD1306_DISPLAYON );
//=======================================================================	

#elif defined SH1106_128x64
//== Init sequence for SH1106 128x64 OLED module ======================

  ssd1306_WriteCommand( SSD1306_DISPLAYOFF );
  ssd1306_WriteCommand( SSD1306_SETSTARTPAGE | 0X0 );            	// set page address  
  ssd1306_WriteCommand( SSD1306_SETCONTRAST ); 
  ssd1306_WriteCommand( 0x80 );             						// 128
  ssd1306_WriteCommand( SSD1306_SEGREMAP | 0X1 );                	// set segment remap
  ssd1306_WriteCommand( SSD1306_NORMALDISPLAY );                 	// normal / reverse
  ssd1306_WriteCommand( SSD1306_SETMULTIPLEX ); 
  ssd1306_WriteCommand( 0x3F );            							// ratio 64
  ssd1306_WriteCommand( SH1106_SET_PUMP_MODE );
  ssd1306_WriteCommand( SH1106_PUMP_ON );  							// set charge pump enable
  ssd1306_WriteCommand( SH1106_SET_PUMP_VOLTAGE | 0X2 );         	// 8.0 volts
  ssd1306_WriteCommand( SSD1306_COMSCANDEC );                    	// Com scan direction
  ssd1306_WriteCommand( SSD1306_SETDISPLAYOFFSET ); 
  ssd1306_WriteCommand( 0X00 );        								// set display offset
  ssd1306_WriteCommand( SSD1306_SETDISPLAYCLOCKDIV ); 
  ssd1306_WriteCommand( 0X80 );      								// set osc division
  ssd1306_WriteCommand( SSD1306_SETPRECHARGE ); 
  ssd1306_WriteCommand( 0X1F );            							// set pre-charge period
  ssd1306_WriteCommand( SSD1306_SETCOMPINS ); 
  ssd1306_WriteCommand( 0X12 );              						// set COM pins
  ssd1306_WriteCommand( SSD1306_SETVCOMDETECT );  
  ssd1306_WriteCommand( 0x40 );          							// set vcomh
  ssd1306_WriteCommand( SSD1306_DISPLAYON );
//=======================================================================	
#endif	  
  
	ssd1306_WriteCommand(SSD1306_DEACTIVATE_SCROLL);

	/* Clear screen */
	SSD1306_Fill(SSD1306_COLOR_BLACK);
	
	/* Update screen */
	SSD1306_UpdateScreen();
	
	/* Set default values */
	SSD1306.CurrentX = 0;
	SSD1306.CurrentY = 0;
	
	/* Initialized OK */
	SSD1306.Initialized = 1;
	
	/* Return OK */
	return 1;
}

void SSD1306_UpdateScreen(void) {
	uint8_t m;
	
	for (m = 0; m < 8; m++) {
		ssd1306_WriteCommand(0xB0 + m);
		
		#if defined (SH1106_128x64)
			// экран SH1106 имеет больше разрешение 132x64 страниц а сам экран 128 поетому смещаем на 2 
			ssd1306_WriteCommand(SSD1306_SETLOWCOLUMN + ( 2 & 0x0f ) );
			ssd1306_WriteCommand(SSD1306_SETHIGHCOLUMN + ( 2 >> 4 ) );
		#else
			ssd1306_WriteCommand(SSD1306_SETLOWCOLUMN );
			ssd1306_WriteCommand(SSD1306_SETHIGHCOLUMN );
		#endif
			
		/* Write multi data */
		ssd1306_WriteData(&SSD1306_Buffer[SSD1306_WIDTH * m], SSD1306_WIDTH);
	}
}

void ssd1306_WriteCommand(uint8_t data) {
	
	#if defined(SSD1306_USE_I2C)
		uint8_t dt[2];
		dt[0] = 0x00;
		dt[1] = data;	
		HAL_I2C_Master_Transmit(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, dt, 2, 10);
	
	#elif defined(SSD1306_USE_SPI)
		HAL_GPIO_WritePin(SSD1306_CS_GPIO_Port, SSD1306_CS_Pin, GPIO_PIN_RESET); // select OLED
		HAL_GPIO_WritePin(SSD1306_DC_GPIO_Port, SSD1306_DC_Pin, GPIO_PIN_RESET); // command
		
		HAL_SPI_Transmit(&SSD1306_SPI_PORT, (uint8_t *) &data, 1, HAL_MAX_DELAY);
		/*
			// отправка по SMSIS
			SPI1->DR = data;
			while(( SPI1->SR & SPI_SR_BSY) ){};	// ждем когда освободится шина ( означает что передача закончилась )
				
		*/
		HAL_GPIO_WritePin(SSD1306_CS_GPIO_Port, SSD1306_CS_Pin, GPIO_PIN_SET); // un-select OLED
	
	#else
	#error "You should define SSD1306_USE_SPI or SSD1306_USE_I2C macro"
	#endif
}
