==> Sergo101/cmake_ch32h417_test/hw_lib/ssd1306/src/ssd1306.c <==
#include "SSD1306.h"
#include "debug.h"
#include "spi.h"
#define ABS(x)   ((x) > 0 ? (x) : -(x))

void SSD1306_writecommand ( uint8_t command) 
{
	GPIO_WriteBit(oled_DC_port, oled_DC_pin, RESET);
	SPI_TransmittRecieve(&command, NULL, 1, oled_CS_port, oled_CS_pin);
}

uint8_t SSD1306_Init(void) 
{

	GPIO_InitTypeDef GPIO_InitStructure = {0};

  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);

  GPIO_InitStructure.GPIO_Pin = oled_DC_pin;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(oled_DC_port, &GPIO_InitStructure);

  GPIO_InitStructure.GPIO_Pin = oled_CS_pin;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(oled_CS_port, &GPIO_InitStructure);

	Delay_Ms(10);
    /* Init LCD */
	SSD1306_writecommand (SSD1306_DISPLAYOFF);
	SSD1306_writecommand (SSD1306_SETDISPLAYCLOCKDIV);
  SSD1306_writecommand (0x00);
  SSD1306_writecommand (SSD1306_SETMULTIPLEX);
  SSD1306_writecommand (MULTIPLEX);
  SSD1306_writecommand (SSD1306_SETDISPLAYOFFSET);
  SSD1306_writecommand (0x00);
  SSD1306_writecommand (SSD1306_SETSTARTLINE | 0x00);
    // We use internal charge pump
  SSD1306_writecommand (SSD1306_CHARGEPUMP);
  SSD1306_writecommand (0x14);
    // Horizontal memory mode
  SSD1306_writecommand (SSD1306_MEMORYMODE);
  SSD1306_writecommand (0x00);
  SSD1306_writecommand (SSD1306_SEGREMAP | 0x01);
	#ifdef TURN_90_DEGREE
	SSD1306_writecommand (SSD1306_COMSCANINC);
	#else
  SSD1306_writecommand (SSD1306_COMSCANDEC);
	#endif
	SSD1306_writecommand (SSD1306_SETCOMPINS);
  SSD1306_writecommand (COMPINS);//for 128x32 0x02, for 128x64 0x12;
  SSD1306_writecommand (SSD1306_DEACTIVATE_SCROLL);
  SSD1306_writecommand (SSD1306_COLUMNADDR);
  SSD1306_writecommand (0x00);
  SSD1306_writecommand (127);
  SSD1306_writecommand (SSD1306_PAGEADDR);
  SSD1306_writecommand (0x00);
  SSD1306_writecommand (0x07);
  // Max contrast
  SSD1306_writecommand (SSD1306_SETCONTRAST);
  SSD1306_writecommand (0xCF);
  SSD1306_writecommand (SSD1306_SETPRECHARGE);
  SSD1306_writecommand (0xF1);
  SSD1306_writecommand (SSD1306_SETVCOMDETECT);
  SSD1306_writecommand (0x40);
  SSD1306_writecommand (SSD1306_DISPLAYALLON_RESUME);

	SSD1306_writecommand (SSD1306_DISPLAYON);
	
	/* Clear screen */
	SSD1306_Fill(SSD1306_COLOR_BLACK);
	
	/* Update screen */
	SSD1306_UpdateScreen();
	

	/* Set default values */
	SSD1306.CurrentX = 0;
	SSD1306.CurrentY = 0;
	
	/* Initialized OK */
	SSD1306.Initialized = 1;
	
	/* Return OK */
	return 1;
}

void SSD1306_UpdateScreen(void)
{
	
	output.data = 0x40;

	SSD1306_writecommand(0xB0);
	SSD1306_writecommand(0x10);
	SSD1306_writecommand(0x00);

	SSD1306_writecommand (SSD1306_PAGEADDR);
	SSD1306_writecommand (0x00);
	SSD1306_writecommand (0x07);
	
	GPIO_WriteBit(oled_DC_port, oled_DC_pin, SET);
	SPI_TransmittRecieve((uint8_t*) &output, NULL, sizeof(output), oled_CS_port, oled_CS_pin);
}
